--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dog-trainer-tracker",
   "private": true,
   "type": "module",
+  "homepage": "https://beaulazear.github.io/trainer-log",
   "scripts": {
     "build": "react-router build",
     "dev": "react-router dev",
