--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "react-router dev",
     "start": "react-router-serve ./build/server/index.js",
     "typecheck": "react-router typegen && tsc",
-    "predeploy": "npm run build && cp public/404.html build/client/404.html",
+    "predeploy": "npm run build && cp build/client/index.html build/client/404.html",
     "deploy": "gh-pages -d build/client"
   },
   "dependencies": {
